# HCKMX26-1776626268

./: .env.example  .gitignore  Cargo.toml  README.md
app/: index.html  (+1 more)
classifier/: Cargo.toml  pyproject.toml
classifier/src/: config.rs  decide.rs  image_classifier.rs  lib.rs  main.py  nli.rs  ort_ep.rs  pipeline.rs
crates/classifier-core/: Cargo.toml
crates/classifier-core/src/: config.rs  decide.rs  filter.rs  lexical.rs  lib.rs  nli.rs  pipeline.rs
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs
nsfw-py/: README.md  pyproject.toml
nsfw-py/src/: export.py
server/: Cargo.toml
server/src/: main.rs  middleware.rs
tauri-plugin-native-browser-pane/: Cargo.toml  build.rs
tauri-plugin-native-browser-pane/android/: build.gradle.kts  proguard-rules.pro
tauri-plugin-native-browser-pane/android/src/main/java/: NativeBrowserPanePlugin.kt
tauri-plugin-native-browser-pane/ios/: Package.swift
tauri-plugin-native-browser-pane/ios/.build/: workspace-state.json
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/ModuleCache/: Distributed-40Y0TMTACQUW.swiftmodule  Network-1P7RMH5J02BFK.swiftmodule  WebKit-3NPHXAJYREUJO.swiftmodule
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/ModuleCache/DIKQ58UKVH0J/: Accessibility-1C39AWPZ3ZCHS.pcm  ApplicationServices-318ED6HVOOOWK.pcm  AvailabilityMacros-3UMTTYWUZY1PD.pcm  CFNetwork-2QM24TU1OUNU.pcm  CUPS-JHNNNXXF1OP5.pcm  Cocoa-G0K7USNOMP8I.pcm  ColorSync-FUKP4SF5WDN.pcm  CoreData-3DC7JJOJKG7MT.pcm  CoreFoundation-XRVNUAOWDGXL.pcm  CoreGraphics-3T9VBW5GP5OQV.pcm  CoreImage-2CUH609RP6X7P.pcm  CoreServices-3FK4JMT7K1IRE.pcm  CoreText-2K5RVIO1QZLNS.pcm  CoreTransferable-KM8905ZS9D06.pcm  CoreVideo-1EDP4WMD3WVWL.pcm  DarwinFoundation-134SGFEPXAZL0.pcm  DeveloperToolsSupport-3H6S1A3Z3FZ2K.pcm  DiskArbitration-QK5Z60WO3GCK.pcm  Dispatch-Y4ZZ1HR72FEI.pcm  IOKit-1YJU4L4Q03Y5.pcm  IOSurface-235Q4H9R8GAYU.pcm  ImageIO-27XM1J7FM4Q7H.pcm  JavaScriptCore-37BIHHTO2GP5T.pcm  MachO-YWFNV22Z5VUT.pcm  Metal-1B038G1N9AC0V.pcm  Network-28YD5OZZVN3G6.pcm  OSLog-3M0JBPYXURWPD.pcm  ObjectiveC-1S4XUWQXUMNGK.pcm  OpenGL-2YY2N6L4YVU9Y.pcm  QuartzCore-KO6TAZ9XHBR8.pcm  Security-3MRSRYU7H638B.pcm  SwiftShims-39ZO3A1THQ3HL.pcm  Symbols-1QNIPN3XYP8LO.pcm  TargetConditionals-1U3D0O3P47X6G.pcm  UniformTypeIdentifiers-2TQCH09YI5T7Y.pcm  WebKit-2I9R28BSEZI5Z.pcm  XPC-1O6EQOTZ7QBYA.pcm  _Builtin_float-9VMJEIX0S9SE.pcm  _Builtin_inttypes-9VMJEIX0S9SE.pcm  _Builtin_iso646-9VMJEIX0S9SE.pcm  (+57 more)
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/SwiftRs.build/: module.modulemap
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/Tauri.build/: module.modulemap
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/index/db/v13/p99162--0665ef/: lock.mdb
tauri-plugin-native-browser-pane/ios/.build/arm64-apple-macosx/debug/tauri_plugin_native_browser_pane.build/: module.modulemap  output-file-map.json
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/: FETCH_HEAD  config  packed-refs
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/objects/pack/: pack-31b1c289aff04d4141c05f1e6cd69be300096a7a.idx  pack-31b1c289aff04d4141c05f1e6cd69be300096a7a.pack
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/heads/: main
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/60/: merge
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/63/: head
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/65/: head
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/66/: head
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/67/: head
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/70/: head  merge
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/72/: head  merge
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/73/: head  merge
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/pull/75/: head  merge
tauri-plugin-native-browser-pane/ios/.build/repositories/swift-rs-16819c90/refs/tags/: 1.0.7
tauri-plugin-native-browser-pane/ios/Sources/: NativeBrowserPanePlugin.swift
tauri-plugin-native-browser-pane/src/: ios_filter.rs  lib.rs
(+39 files in other folders)
