[project]
name = "classifier"
version = "0.1.0"
description = "Zero-shot multi-hypothesis classifier prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.44",
    "torch>=2.2",
    "python-dotenv>=1.0",
    "unidecode>=1.3",
]

[project.optional-dependencies]
export = [
    "optimum[onnxruntime]>=1.23",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxsim>=0.4",
]
