[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Actix-web server: recibe filter events de la app y los expone al dashboard"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
parking_lot = "0.12"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
# Carga el .env (ignorado por git) con SHIELD_AUTH_TOKEN antes de bind.
dotenvy = "0.15"
