[package]
name = "tauri-plugin-native-browser-pane"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-native-browser-pane"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Classifier compartido + bridge Swift→Rust para el filter de textos.
classifier = { path = "../classifier" }

[target."cfg(target_os = \"ios\")".dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }
swift-rs = "1.0"

[target."cfg(target_os = \"android\")".dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }
